--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Music&display=swap');
+
 :root{
     --dark-bg: #303446;
     --dark-font: #c6d0f5;
@@ -195,11 +197,8 @@ input[type=range]{
             align-items: center;
             justify-content: center;
 
-            .division-checkbox{
-                display: none;
-            }
-
             .divisions{
+                font-family: "Noto Music", sans-serif;
                 margin: 20px 20px 0px 20px;
                 width: 100px;
                 padding: 10px;
@@ -209,11 +208,12 @@ input[type=range]{
                 border: 2px solid var(--font-color);
                 border-radius: 5px;
                 cursor: pointer;
-                transition: all.2s;
+                transition: all .2s;
             }
 
             .selected{
-                box-shadow: 0 0 15px var(--main-color);
+                border: 2px solid var(--main-color);
+                color: var(--main-color);
             }
         }
     }
@@ -235,10 +235,6 @@ input[type=range]{
             cursor: pointer;
             transition: .2s;
             margin-left: 8px;
-
-            &:hover{
-                filter: drop-shadow(0 0 5px var(--main-color));
-            }
         }
     }
 
